# moped

./: README.md
Modeling_with_python/BundlerPy/: manifest.xml
Modeling_with_python/moped_modeling/: manifest.xml
Modeling_with_python/tf_format/: manifest.xml
Modeling_with_python/utils/: CMakeLists.txt  PCloud.py  PCloud2.py  camera_3d_calib.py  clicker.py  color.py  dataset.py  dhcp_invoker.py  disparity.py  example_dataset.yaml  lasso.py  libutils.pyx  manifest.xml  mayavi_rendering.py  plotting.py  process.py  task.py  utils.py
imagesender/: README.md
imagesender/launch/: _launch.imagesender  _launch.imagesenderlist  imagesender_test.launch
moped-example/: README.md  mainpage.dox
moped-example/launch/: _launch.imagesenderlist  _launch.moped2  moped-example.launch  moped_example.launch
moped2/: CMakeLists.txt  README.md  manifest.xml  moped.cpp  rosdep.yaml
moped2/launch/: asus_xtion.launch  asus_xtion_ir_intrinsics.yaml  asus_xtion_rgb_intrinsics.yaml  moped2.launch  moped2_openni.launch
moped3d/: CMakeLists.txt  mainpage.dox  startkinect.launch  startmoped.launch
moped_example/: README.md  manifest.xml
moped_example/launch/: _launch.moped2
moped_models/: manifest.xml
moped_models/example_models/: coke.moped.xml  frozen_rice.moped.xml  fuze_bottle.moped.xml  juicebox_back.moped.xml  poptarts_raspberry.moped.xml
moped_object_pose_publisher/: CMakeLists.txt  manifest.xml
moped_object_pose_publisher/launch/: run.launch
moped_object_pose_publisher/src/: node.cpp
pr_msgs/: README.md  manifest.xml
pr_msgs/msg/: ObjectPose.msg
(+6 files in other folders)
